refactoring put object